--- a/index.html
+++ b/index.html
@@ -135,13 +135,12 @@
                       I 'm Yehya Magdy and <span>Front End Develober</span>
                     </h3>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Quia ipsam, blanditiis explicabo dolor mollitia nisi
-                      possimus illum id alias saepe sint fuga harum quae ex
-                      doloribus rem expedita obcaecati exercitationem! Ducimus
-                      velit blanditiis dolores. Aliquid nam, asperiores quasi
-                      odio nostrum magni rerum dolores? Velit nulla at, quod
-                      sequi quo quas porro repellendus labore placeat? Illum.
+                      Hello, my name is Yahya Magdy, I welcome you to my
+                      personal page. I make projects with the best possible
+                      technology so that you get the best user experience and
+                      dynamic and stytic websites. I have extensive experience
+                      in designing websites. I hope you enjoy the experience on
+                      the site and benefit from my own experiences
                     </p>
                   </div>
                 </div>
@@ -158,7 +157,7 @@
                         <p>Git hub: <span>yehyamagdy2008</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Email : <span>yvdbuenc@gmail.com</span></p>
+                        <p>Email : <span>yhyymjdy617@gmail.com</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Experience : <span>1 year</span></p>
@@ -355,10 +354,10 @@
                   <div class="icon">
                     <i class="fa fa-mobile-alt"></i>
                   </div>
-                  <h4>Wep Design</h4>
+                  <h4>Responsive website</h4>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Accusantium quod asperiores ad?
+                    It is very important to make the site responsive to you so
+                    that the number of visitors to the site increases
                   </p>
                 </div>
               </div>
@@ -369,10 +368,11 @@
                   <div class="icon">
                     <i class="fa fa-laptop-code"></i>
                   </div>
-                  <h4>Wep Design</h4>
+                  <h4>Website translation</h4>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Accusantium quod asperiores ad?
+                    It is important to make your site in English or Arabic so
+                    that the user can understand it or whatever language he
+                    wants
                   </p>
                 </div>
               </div>
@@ -383,10 +383,10 @@
                   <div class="icon">
                     <i class="fa fa-palette"></i>
                   </div>
-                  <h4>Wep Design</h4>
+                  <h4>Personal websites</h4>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Accusantium quod asperiores ad?
+                    I design personal websites with the latest technologies in
+                    programming to suit the user until he gets the job he wants
                   </p>
                 </div>
               </div>
@@ -397,10 +397,11 @@
                   <div class="icon">
                     <i class="fa fa-code"></i>
                   </div>
-                  <h4>Wep Design</h4>
+                  <h4>Promotional websites</h4>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Accusantium quod asperiores ad?
+                    I create advertising sites for restaurants, cafes, or
+                    anything the user wants to publish the place he owns in many
+                    places
                   </p>
                 </div>
               </div>
@@ -411,27 +412,17 @@
                   <div class="icon">
                     <i class="fa fa-search"></i>
                   </div>
-                  <h4>Wep Design</h4>
+                  <h4>Many pages web sites</h4>
                   <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Accusantium quod asperiores ad?
+                    I make sites that have a lot of pages in order to satisfy
+                    the user's desire with the latest technologies to avoid
+                    slowdowns in the site and problems
                   </p>
                 </div>
               </div>
               <!-- services item End-->
               <!-- services item Start-->
-              <div class="services-item padd-15">
-                <div class="services-item-inner">
-                  <div class="icon">
-                    <i class="fa fa-bullhorn"></i>
-                  </div>
-                  <h4>Wep Design</h4>
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Accusantium quod asperiores ad?
-                  </p>
-                </div>
-              </div>
+
               <!-- services item End-->
             </div>
           </div>
@@ -482,7 +473,7 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="./img/portfolio-4.jpg" alt="" />
+                    <img src="./img/project4.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -514,7 +505,7 @@
                   <i class="fa fa-phone"></i>
                 </div>
                 <h4>Call Us On</h4>
-                <p>+21 154853484</p>
+                <p>+20 1274582066</p>
               </div>
               <!-- contact info item End-->
               <!-- contact info item start-->
@@ -523,7 +514,7 @@
                   <i class="fa fa-map-marker-alt"></i>
                 </div>
                 <h4>Office</h4>
-                <p>Lorem, ipsum dolor.</p>
+                <p>Egypt in Alexandria</p>
               </div>
               <!-- contact info item End-->
               <!-- contact info item start-->
@@ -532,7 +523,7 @@
                   <i class="fa fa-envelope"></i>
                 </div>
                 <h4>Email</h4>
-                <p>yvdbuenc@gmail.com</p>
+                <p>yhyymjdy617@gmail.com</p>
               </div>
               <!-- contact info item End-->
               <!-- contact info item start-->
@@ -550,57 +541,86 @@
               I'M VERY RESPONIVE TO MESSAGES
             </h4>
             <!-- contact form -->
-            <div class="row">
-              <div class="contact-form padd-15">
-                <div class="row">
-                  <div class="form-item col-6 padd-15">
-                    <div class="form-group">
+            <form
+              action="https://formsubmit.co/yhyymjdy617@gmail.com"
+              method="POST"
+            >
+              <div class="row">
+                <div class="contact-form padd-15">
+                  <div class="row">
+                    <div class="form-item col-6 padd-15">
+                      <div class="form-group">
+                        <input
+                          required
+                          name="name"
+                          type="text"
+                          class="form-control name"
+                          placeholder="Name"
+                        />
+                      </div>
+                    </div>
+                    <div class="form-item col-6 padd-15">
+                      <div class="form-group">
+                        <input
+                          required
+                          type="email"
+                          class="form-control email"
+                          name="email"
+                          placeholder="Email"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="form-item col-12 padd-15">
+                      <div class="form-group">
+                        <input
+                          required
+                          type="text"
+                          class="form-control Supject"
+                          placeholder="Supject"
+                          name="Supject"
+                        />
+                      </div>
+                      <br />
+                      <div class="form-group">
+                        <input
+                          required
+                          type="text"
+                          class="form-control phone"
+                          placeholder="phone"
+                          name="phone"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="form-item col-12 padd-15">
+                      <div class="form-group">
+                        <textarea
+                          class="form-control Message"
+                          placeholder="Message"
+                          required
+                          name="Message"
+                        ></textarea>
+                      </div>
+                    </div>
+                  </div>
+                  <input type="hidden" name="_captcha" value="false" />
+                  <input type="hidden" name="_template" value="table" />
+                  <div class="row">
+                    <div class="form-item col-12 padd-15">
                       <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Name"
+                        style="cursor: pointer"
+                        type="submit"
+                        class="btn"
+                        value="Send Me"
                       />
                     </div>
-                  </div>
-                  <div class="form-item col-6 padd-15">
-                    <div class="form-group">
-                      <input
-                        type="email"
-                        class="form-control"
-                        placeholder="Email"
-                      />
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-item col-12 padd-15">
-                    <div class="form-group">
-                      <input
-                        type="email"
-                        class="form-control"
-                        placeholder="Supject"
-                      />
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-item col-12 padd-15">
-                    <div class="form-group">
-                      <textarea
-                        name=""
-                        class="form-control"
-                        placeholder="Message"
-                      ></textarea>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-item col-12 padd-15">
-                    <button type="submit" class="btn">Send Me</button>
                   </div>
                 </div>
               </div>
-            </div>
+            </form>
           </div>
         </section>
         <!-- Contact Section End -->
@@ -628,6 +648,7 @@
     <script src="./code.js"></script>
     <script src="./switche.js"></script>
     <script src="./typed history.js"></script>
+    <script src="./stmp.js"></script>
     <script>
       var typed = new Typed(".typing", {
         strings: ["Front End Develober"],
