--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -57,6 +57,7 @@
   <body class="hidden">
     <!-- Mane container start -->
     <div class="Main-container">
+      <div class="">kbdvsjb</div>
       <div class="aside">
         <div class="logo">
           <a href="#"> <span>Y</span>ehya </a>
@@ -86,7 +87,7 @@
           <li>
             <a href="#portfolio">
               <i class="fa fa-briefcase"></i>
-              Portfolio
+              Projects
             </a>
           </li>
           <li>
@@ -99,6 +100,10 @@
       </div>
       <div class="main-contet">
         <section class="home active section" id="home">
+          <select class="langwitch">
+            <option value="English">English</option>
+            <option value="Arabic">العربية</option>
+          </select>
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -109,9 +114,9 @@
                   I' m a <span class="typing"></span>
                 </h3>
                 <p>
-                  I'm a wep Designer With extensive experience for over 10
-                  Years.my expertise is to create and Wepsite Design,graphic
-                  Designe, and many More...
+                  I am a front-end developer. I design the site in the best way
+                  possible, and I have skills in making the site suitable for
+                  presentation, and I have experience in this field
                 </p>
               </div>
               <div class="home-img padd-15">
@@ -119,6 +124,16 @@
               </div>
             </div>
           </div>
+
+          <a
+            href="https://wa.me/+201274582066"
+            target="_blank"
+            title="قم بمراسلتي الان!"
+          >
+            <div class="watsapp">
+              <img src="./img/WatsApp.png" alt="" />
+            </div>
+          </a>
         </section>
         <section class="about section" id="about">
           <div class="container">
@@ -213,131 +228,66 @@
                     </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="education padd-15">
+                <!--  <div class="row">
+                 <div class="education padd-15">
                     <h3 class="title">Education</h3>
                     <div class="row">
                       <div class="timline-box padd-15">
                         <div class="timline shadow-dark">
-                          <!-- timeline item -->
                           <div class="timline-item">
                             <div class="circle-dot"></div>
                             <h3 class="timline-data">
                               <i class="fa fa-calendar"></i>
-                              2013 - 2015
+                              2023 - 2026
                             </h3>
-                            <h4 class="timline-title">
-                              Master in Computer science
-                            </h4>
+                            <h4 class="timline-title">high school</h4>
                             <p class="timline-text">
-                              Lorem, ipsum dolor sit amet consectetur
-                              adipisicing elit. Dolorem, expedita magni. Neque
-                              asperiores repellendus odit impedit omnis alias
-                              fuga atque, sint qui, debitis eius blanditiis?
+                              I am now in the first year of high school
                             </p>
                           </div>
-                          <!-- timeline item -->
-                          <div class="timline-item">
-                            <div class="circle-dot"></div>
-                            <h3 class="timline-data">
-                              <i class="fa fa-calendar"></i>
-                              2013 - 2015
-                            </h3>
-                            <h4 class="timline-title">
-                              Master in Computer science
-                            </h4>
-                            <p class="timline-text">
-                              Lorem, ipsum dolor sit amet consectetur
-                              adipisicing elit. Dolorem, expedita magni. Neque
-                              asperiores repellendus odit impedit omnis alias
-                              fuga atque, sint qui, debitis eius blanditiis?
-                            </p>
-                          </div>
-                          <!-- timeline item -->
-                          <div class="timline-item">
-                            <div class="circle-dot"></div>
-                            <h3 class="timline-data">
-                              <i class="fa fa-calendar"></i>
-                              2013 - 2015
-                            </h3>
-                            <h4 class="timline-title">
-                              Master in Computer science
-                            </h4>
-                            <p class="timline-text">
-                              Lorem, ipsum dolor sit amet consectetur
-                              adipisicing elit. Dolorem, expedita magni. Neque
-                              asperiores repellendus odit impedit omnis alias
-                              fuga atque, sint qui, debitis eius blanditiis?
-                            </p>
-                          </div>
+
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="experience padd-15">
+                  </div> -->
+                <!-- <div class="experience padd-15">
                     <h3 class="title">Experience</h3>
                     <div class="row">
                       <div class="timline-box padd-15">
                         <div class="timline shadow-dark">
-                          <!-- timeline item -->
+
                           <div class="timline-item">
                             <div class="circle-dot"></div>
                             <h3 class="timline-data">
                               <i class="fa fa-calendar"></i>
-                              2013 - 2015
+                              2022 - 2023
                             </h3>
-                            <h4 class="timline-title">
-                              Master in Computer science
-                            </h4>
+                            <h4 class="timline-title">Freelancing</h4>
                             <p class="timline-text">
-                              Lorem, ipsum dolor sit amet consectetur
-                              adipisicing elit. Dolorem, expedita magni. Neque
-                              asperiores repellendus odit impedit omnis alias
-                              fuga atque, sint qui, debitis eius blanditiis?
+                              I worked on freelancing sites and did projects
+                              before, and I worked on sites such as Independent
+                              and Fives
                             </p>
                           </div>
-                          <!-- timeline item -->
-                          <div class="timline-item">
-                            <div class="circle-dot"></div>
-                            <h3 class="timline-data">
-                              <i class="fa fa-calendar"></i>
-                              2013 - 2015
-                            </h3>
-                            <h4 class="timline-title">
-                              Master in Computer science
-                            </h4>
-                            <p class="timline-text">
-                              Lorem, ipsum dolor sit amet consectetur
-                              adipisicing elit. Dolorem, expedita magni. Neque
-                              asperiores repellendus odit impedit omnis alias
-                              fuga atque, sint qui, debitis eius blanditiis?
-                            </p>
-                          </div>
-                          <!-- timeline item -->
-                          <div class="timline-item">
-                            <div class="circle-dot"></div>
-                            <h3 class="timline-data">
-                              <i class="fa fa-calendar"></i>
-                              2013 - 2015
-                            </h3>
-                            <h4 class="timline-title">
-                              Master in Computer science
-                            </h4>
-                            <p class="timline-text">
-                              Lorem, ipsum dolor sit amet consectetur
-                              adipisicing elit. Dolorem, expedita magni. Neque
-                              asperiores repellendus odit impedit omnis alias
-                              fuga atque, sint qui, debitis eius blanditiis?
-                            </p>
-                          </div>
+
+
                         </div>
                       </div>
                     </div>
-                  </div>
-                </div>
+                  </div> 
+                </div>-->
               </div>
             </div>
           </div>
+          <a
+            href="https://wa.me/+201274582066"
+            target="_blank"
+            title="قم بمراسلتي الان!"
+          >
+            <div class="watsapp">
+              <img src="./img/WatsApp.png" alt="" />
+            </div>
+          </a>
         </section>
         <!-- Services Section Start -->
         <section class="services section" id="services">
@@ -426,6 +376,15 @@
               <!-- services item End-->
             </div>
           </div>
+          <a
+            href="https://wa.me/+201274582066"
+            target="_blank"
+            title="قم بمراسلتي الان!"
+          >
+            <div class="watsapp">
+              <img src="./img/WatsApp.png" alt="" />
+            </div>
+          </a>
         </section>
         <!-- Services Section end -->
         <!-- portfoli Section Start -->
@@ -433,7 +392,7 @@
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
-                <h2>Portfolio</h2>
+                <h2>Projects</h2>
               </div>
             </div>
             <div class="row">
@@ -477,6 +436,20 @@
                   </div>
                 </div>
               </div>
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img src="./img/project5.png" alt="" />
+                  </div>
+                </div>
+              </div>
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img src="./img/project5.png" alt="" />
+                  </div>
+                </div>
+              </div>
               <!-- portfolio item end -->
               <!-- portfolio item start -->
 
@@ -486,7 +459,17 @@
               <!-- portfolio item end -->
             </div>
           </div>
+          <a
+            href="https://wa.me/+201274582066"
+            target="_blank"
+            title="قم بمراسلتي الان!"
+          >
+            <div class="watsapp">
+              <img src="./img/WatsApp.png" alt="" />
+            </div>
+          </a>
         </section>
+
         <!-- portfoli Section End -->
         <!-- Contact Section Start -->
         <section class="contact section" id="contact">
@@ -622,6 +605,15 @@
               </div>
             </form>
           </div>
+          <a
+            href="https://wa.me/+201274582066"
+            target="_blank"
+            title="قم بمراسلتي الان!"
+          >
+            <div class="watsapp">
+              <img src="./img/WatsApp.png" alt="" />
+            </div>
+          </a>
         </section>
         <!-- Contact Section End -->
       </div>
@@ -648,7 +640,7 @@
     <script src="./code.js"></script>
     <script src="./switche.js"></script>
     <script src="./typed history.js"></script>
-    <script src="./stmp.js"></script>
+    <script src="./lang.js"></script>
     <script>
       var typed = new Typed(".typing", {
         strings: ["Front End Develober"],
