--- a/index.html
+++ b/index.html
@@ -100,10 +100,6 @@
       </div>
       <div class="main-contet">
         <section class="home active section" id="home">
-          <select class="langwitch">
-            <option value="English">English</option>
-            <option value="Arabic">العربية</option>
-          </select>
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -219,6 +215,13 @@
                         </div>
                       </div>
                       <div class="skill-item padd-15">
+                        <h5>Bootstrap</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 50%"></div>
+                          <div class="skill-percent">50%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item padd-15">
                         <h5>JavaScript</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 60%"></div>
@@ -313,19 +316,6 @@
               </div>
               <!-- services item End-->
               <!-- services item Start-->
-              <div class="services-item padd-15">
-                <div class="services-item-inner">
-                  <div class="icon">
-                    <i class="fa fa-laptop-code"></i>
-                  </div>
-                  <h4>Website translation</h4>
-                  <p>
-                    It is important to make your site in English or Arabic so
-                    that the user can understand it or whatever language he
-                    wants
-                  </p>
-                </div>
-              </div>
               <!-- services item End-->
               <!-- services item Start-->
               <div class="services-item padd-15">
@@ -405,7 +395,13 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="./img/project-1.png" alt="" />
+                    <a
+                      href="https://yehyamagdy2008.github.io/Restaurant-website/"
+                      target=" _blank
+                      "
+                    >
+                      <img src="./img/project-1.png" alt="" />
+                    </a>
                   </div>
                 </div>
               </div>
@@ -414,7 +410,12 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="./img/project2.png" alt="" />
+                    <a
+                      href="https://yehyamagdy2008.github.io/My-Project/"
+                      target="_blank"
+                    >
+                      <img src="./img/project2.png" alt="" />
+                    </a>
                   </div>
                 </div>
               </div>
@@ -423,7 +424,12 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="./img/project3.png" alt="" />
+                    <a
+                      href="https://yehyamagdy2008.github.io/project35/"
+                      target="_blank"
+                    >
+                      <img src="./img/project3.png" alt="" />
+                    </a>
                   </div>
                 </div>
               </div>
@@ -432,21 +438,39 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="./img/project4.png" alt="" />
+                    <a
+                      href="https://yehyamagdy2008.github.io/GEM/"
+                      target="_blank"
+                    >
+                      <img src="./img/project4.png" alt="" />
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="./img/project5.png" alt="" />
+                    <a
+                      href="https://yehyamagdy2008.github.io/pizza/"
+                      target="_blank"
+                    >
+                      <img src="./img/project5.png" alt="" />
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="./img/project5.png" alt="" />
+                    <a
+                      href="https://yehyamagdy2008.github.io/project-5/"
+                      target="_blank"
+                    >
+                      <img
+                        src="./img/Screenshot from 2023-07-16 21-08-44.png"
+                        alt=""
+                      />
+                    </a>
                   </div>
                 </div>
               </div>
