--- a/index.html
+++ b/index.html
@@ -411,10 +411,13 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <a
-                      href="https://yehyamagdy2008.github.io/My-Project/"
+                      href="https://yehyamagdy2008.github.io/Restaurant-site/"
                       target="_blank"
                     >
-                      <img src="./img/project2.png" alt="" />
+                      <img
+                        src="./img/Screenshot from 2023-07-27 06-04-22.png"
+                        alt=""
+                      />
                     </a>
                   </div>
                 </div>
@@ -463,13 +466,10 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <a
-                      href="https://yehyamagdy2008.github.io/project-5/"
+                      href="https://yehyamagdy2008.github.io/My-Project/"
                       target="_blank"
                     >
-                      <img
-                        src="./img/Screenshot from 2023-07-16 21-08-44.png"
-                        alt=""
-                      />
+                      <img src="./img/project2.png" alt="" />
                     </a>
                   </div>
                 </div>
