--- a/index.html
+++ b/index.html
@@ -222,6 +222,13 @@
                         </div>
                       </div>
                       <div class="skill-item padd-15">
+                        <h5>Tailwind</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 50%"></div>
+                          <div class="skill-percent">50%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item padd-15">
                         <h5>JavaScript</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 60%"></div>
