--- a/index.html
+++ b/index.html
@@ -403,6 +403,10 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <a
+                      style="
+                        background-image: url('./img/project1.png');
+                        transition: 2s;
+                      "
                       href="https://yehyamagdy2008.github.io/Restaurant-website/"
                       target=" _blank
                       "
@@ -418,13 +422,13 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <a
+                      style="
+                        background-image: url('./img/project2.png');
+                        transition: 4s;
+                      "
                       href="https://yehyamagdy2008.github.io/Restaurant-site/"
                       target="_blank"
                     >
-                      <img
-                        src="./img/Screenshot from 2023-07-27 06-04-22.png"
-                        alt=""
-                      />
                     </a>
                   </div>
                 </div>
@@ -435,10 +439,13 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <a
+                      style="
+                        background-image: url('./img/project3.png');
+                        transition: 2.5s;
+                      "
                       href="https://yehyamagdy2008.github.io/project35/"
                       target="_blank"
                     >
-                      <img src="./img/project3.png" alt="" />
                     </a>
                   </div>
                 </div>
@@ -449,10 +456,13 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <a
+                      style="
+                        background-image: url('./img/project4.png');
+                        transition: 3s;
+                      "
                       href="https://yehyamagdy2008.github.io/GEM/"
                       target="_blank"
                     >
-                      <img src="./img/project4.png" alt="" />
                     </a>
                   </div>
                 </div>
@@ -461,10 +471,13 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <a
+                      style="
+                        background-image: url('./img/project5.png');
+                        transition: 4s;
+                      "
                       href="https://yehyamagdy2008.github.io/pizza/"
                       target="_blank"
                     >
-                      <img src="./img/project5.png" alt="" />
                     </a>
                   </div>
                 </div>
@@ -473,10 +486,13 @@
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
                     <a
+                      style="
+                        background-image: url('./img/project6.png');
+                        transition: 2s;
+                      "
                       href="https://yehyamagdy2008.github.io/My-Project/"
                       target="_blank"
                     >
-                      <img src="./img/project2.png" alt="" />
                     </a>
                   </div>
                 </div>
